[gd_scene load_steps=9 format=3 uid="uid://cuetrkaqtmq3e"]

[ext_resource type="Script" uid="uid://s5n00kd3yl0x" path="res://scripts/treasure.gd" id="1_it12x"]
[ext_resource type="Texture2D" uid="uid://cdpin830d8ydf" path="res://assets/monochrome_tilemap_transparent_packed.png" id="2_0g4qu"]
[ext_resource type="AudioStream" uid="uid://dibk7f7ghanw7" path="res://sfx/retro-win.mp3" id="3_0g4qu"]
[ext_resource type="FontFile" uid="uid://basqycvpfvco2" path="res://fonts/PixelOperator8.ttf" id="4_wqbho"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wqbho"]
atlas = ExtResource("2_0g4qu")
region = Rect2(144, 304, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wsoap"]
atlas = ExtResource("2_0g4qu")
region = Rect2(160, 304, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_h5oxq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqbho")
}],
"loop": true,
"name": &"closed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wsoap")
}],
"loop": true,
"name": &"opened",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6chw8"]
size = Vector2(22, 12)

[node name="Treasure" type="Node2D"]
script = ExtResource("1_it12x")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h5oxq")
animation = &"closed"
autoplay = "closed"

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_6chw8")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_0g4qu")
bus = &"SFX"

[node name="WinLabel" type="Label" parent="."]
visible = false
offset_left = -23.0
offset_top = -19.0
offset_right = 23.0
offset_bottom = 4.0
theme_override_fonts/font = ExtResource("4_wqbho")
theme_override_font_sizes/font_size = 8
text = "You Win"

[node name="LoseLabel" type="Label" parent="."]
visible = false
offset_left = -26.0
offset_top = -27.0
offset_right = 27.0
offset_bottom = -4.0
theme_override_fonts/font = ExtResource("4_wqbho")
theme_override_font_sizes/font_size = 8
text = "You need
the key"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
